--- a/mimbackend/config/casbin_model.conf
+++ b/mimbackend/config/casbin_model.conf
@@ -2,16 +2,13 @@
 r = sub, obj, act, dom
 
 [policy_definition]
-p = sub, obj, act, dom, eft
+p = sub, obj, act, dom
 
 [role_definition]
 g = _, _, _
 
 [policy_effect]
-# Allow if there's at least one matching allow policy and no explicit deny
-e = some(where (p.eft == allow)) && !some(where (p.eft == deny))
+e = some(where (p.eft == allow))
 
 [matchers]
-# Match role inheritance, resource pattern, action pattern, and domain
-# Support for wildcard (*) in domain for system-wide permissions
-m = g(r.sub, p.sub, r.dom) && (keyMatch2(r.obj, p.obj) || p.obj == "*") && (keyMatch(r.act, p.act) || p.act == "*") && (r.dom == p.dom || p.dom == "*")
+m = g(r.sub, p.sub, r.dom) && r.obj == p.obj && r.act == p.act
