--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
+    "redis": "^5.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
